--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Voting project",
   "main": "index.js",
   "dependencies": {
-    "web3": "^0.19.1"
+    "web3": "^0.19.1",
+    "ethereumjs-testrpc": "3.0.2",
+    "solc": "0.4.11"
   },
   "devDependencies": {},
   "scripts": {
